TAG: mappingload-1-0-3
DATE: 02/03/2003
STAFF: lec
RELEASE: A
CHANGES: TR 3928/Fantom2 load

TAG: mappingload-1-0-2
DATE: 10/21/2002
STAFF: lec
RELEASE: A
CHANGES: added db.useOneConnection()

TAG: mappingload-1-0-1
DATE: 09/06/2002
STAFF: lec
RELEASE: A
CHANGES: new

TAG: mappingload-1-0-0
DATE: 08/30/2002
STAFF: lec
RELEASE: A
CHANGES: new
