@@ -1,3 +1,9 @@
+TAG: mappingload-1-0-4
+DATE: 02/10/2003
+STAFF: lec
+RELEASE: A
+CHANGES: TR 3928/Fantom2 load
+
 TAG: mappingload-1-0-3
 DATE: 02/03/2003
 STAFF: lec
